# Idle-Car-Factory

./: CMakeLists.txt  README.md  business.cpp  business.h  graphics.cpp  graphics.h  idle  idle.cpp  man  manufacture.cpp  manufacture.h  utils.cpp  utils.h
idle.dSYM/Contents/Resources/DWARF/: idle
idle.dSYM/Contents/Resources/Relocations/aarch64/: idle.yml
